--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -29,13 +29,14 @@
     <!-- Only include the tracking when using `hugo` or adding `--environment production` -->
     {{ if .Site.Params.googleAnalytics }}
     {{ if eq hugo.Environment "production" }}
-    <!-- Google Tag Manager -->
+    <!-- Google Stuff -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','{{ .Site.Params.googleAnalytics }}');</script>
-    <!-- End Google Tag Manager -->
+    <script data-ad-client="ca-pub-4800102579374624" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- End Google Stuff -->
     {{ end }}
     {{ end }}
 
