--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,3 +1,4 @@
 <div class="bg-primary py-3 text-white text-center">
-  <i class='far fa-copyright'></i> 2020 Hofstadter, Inc
+  <i class='far fa-copyright'></i> 2020 
+  <a class="text-white" href="https://hofstadter.io">Hofstadter, Inc</a>
 </div>
