--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow sticky-top" id="navbarMain">
-    <div class="container">
+    <div class="container-fluid">
         <div>
             <a class="navbar-brand" href="{{ .Site.BaseURL | relLangURL }}">
                 {{ with .Site.Params.site_logo }}
