some more helpers, work on intro, more layout / design work

--- a/assets/css/ace.scss
+++ b/assets/css/ace.scss
@@ -119,3 +119,7 @@ table > tbody > tr > td, .bd-content > table > tbody > tr > th, .bd-content > ta
     vertical-align: top;
     border: 1px solid #dee2e6;
 }
+
+table > thead {
+  border: 1px solid #dee2e6;
+}
