--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -39,6 +39,8 @@
                         {{- end -}}
                     </div> <!-- /end of row -->
 
+                  {{ partial "content-footer.html" . }}
+
                 </div>
 
             </div> <!-- /end of row -->
