getting-started/validate-configuration; some reorg and rename

--- a/layouts/shortcodes/childpages.html
+++ b/layouts/shortcodes/childpages.html
@@ -12,7 +12,7 @@
 
 <br>
 {{ if ne .Page.Title $cpage.Title }}
-<a class="h1 text-dark" href="/{{ $cpage.File.Dir }}">{{ $cpage.Title }}</h2>
+<a class="h1 text-primary" href="/{{ $cpage.File.Dir }}">{{ $cpage.Title }}</h2>
 <hr>
 {{ end }}
 
