--- a/layouts/shortcodes/chromaCode.html
+++ b/layouts/shortcodes/chromaCode.html
@@ -1,6 +1,7 @@
 {{ .Scratch.Set "content" "" }}
 {{ .Scratch.Set "identifier" "" }}
 
+{{ $title := .Get "title" }}
 {{ $lang := .Get "lang" }}
 {{ $identifier := "" }}
 {{ $filepath := .Get "file"}}
@@ -12,6 +13,9 @@
 {{ end}}
 
 <div class="position-relative">
+    {{ if $title }}
+    <p class="pl-2 py-1 m-0 border">{{ $title }}</p>
+    {{ end }}
     <div class="position-absolute" style="right:0;">
         <button class="btn btn-light" data-clipboard-target="#{{printf "clipboard_%s" (.Scratch.Get "identifier") }}">
         Copy
