--- a/layouts/shortcodes/chromaHTML.html
+++ b/layouts/shortcodes/chromaHTML.html
@@ -3,6 +3,7 @@
 
 {{ $identifier := "" }}
 {{ $filepath := .Get "file"}}
+{{ $title := .Get "title"}}
 {{ if ($filepath) }}
     {{ .Scratch.Set "content" ($filepath | readFile) }}
     {{ .Scratch.Set "identifier" (first 10 (md5 (.Scratch.Get "content"))) }}
@@ -11,6 +12,9 @@
 {{ end}}
 
 <div class="position-relative">
+    {{ if $title }}
+    <p class="pl-2 py-1 m-0 border">{{ $title }}</p>
+    {{ end }}
     <div class="position-absolute" style="right:0;">
         <button class="btn btn-light" data-clipboard-target="#{{printf "clipboard_%s" (.Scratch.Get "identifier") }}">
         Copy
