--- a/layouts/shortcodes/childpages.html
+++ b/layouts/shortcodes/childpages.html
@@ -8,11 +8,17 @@
 	{{- end }}
 {{- end }}
 
+{{- $brief := .Get "brief" -}}
+
 {{- $cpage := (.Scratch.Get "current") }}
 
 <br>
 {{ if ne .Page.Title $cpage.Title }}
-<a class="h1 text-primary" href="/{{ $cpage.File.Dir }}">{{ $cpage.Title }}</h2>
+<a class="h1 text-primary" href="/{{ $cpage.File.Dir }}">{{ $cpage.Title }}</a>
+{{ if $brief }}<span class="text-dark h4 ml-2">{{ $brief }}</span>{{ end }}
+<br>
+<br>
+
 {{ end }}
 
 <ul class="pl-3 docs-children list-unstyled">
