overview/expressions; coalesce; add light bg to code titles

--- a/layouts/shortcodes/chromaDouble.html
+++ b/layouts/shortcodes/chromaDouble.html
@@ -24,7 +24,7 @@
 
 <div class="d-flex flex-column flex-sm-row align-items-stretch">
   <div class="px-1 flex-fill align-self-stretch">
-    <p class="pl-2 py-1 m-0 border">{{ $lhsTitle }}</p>
+    <p class="pl-2 py-1 m-0 border bg-light">{{ $lhsTitle }}</p>
     {{ if $lhsLang }}
       {{ (print "```" $lhsLang "\n" (.Scratch.Get "lhsContent") "\n```") | markdownify }}
     {{ else }}
@@ -34,7 +34,7 @@
     {{ end }}
   </div>
   <div class="px-1 flex-fill align-self-stretch">
-    <p class="pl-2 py-1 m-0 border">{{ $rhsTitle }}</p>
+    <p class="pl-2 py-1 m-0 border bg-light">{{ $rhsTitle }}</p>
     {{ if $rhsLang }}
       {{ (print "```" $rhsLang "\n" (.Scratch.Get "rhsContent") "\n```") | markdownify }}
     {{ else }}
