--- a/layouts/shortcodes/chromaCode.html
+++ b/layouts/shortcodes/chromaCode.html
@@ -14,7 +14,7 @@
 
 <div class="position-relative">
     {{ if $title }}
-    <p class="pl-2 py-1 m-0 border">{{ $title }}</p>
+    <p class="pl-2 py-1 m-0 border bg-light">{{ $title }}</p>
     {{ end }}
     <div class="position-absolute" style="right:0;">
         <button class="btn btn-light" data-clipboard-target="#{{printf "clipboard_%s" (.Scratch.Get "identifier") }}">
