change highligher, improve snippets, start some new content
Signed-off-by: Tony Worm <tony@hofstadter.io>

--- a/layouts/shortcodes/chromaCode.html
+++ b/layouts/shortcodes/chromaCode.html
@@ -12,16 +12,16 @@
     "missing file input"
 {{ end}}
 
-<div class="position-relative">
+<div class="position-relative mb-3">
     {{ if $title }}
     <p class="pl-2 py-1 m-0 border bg-light">{{ $title }}</p>
     {{ end }}
-    <div class="position-absolute" style="right:0;">
-        <button class="btn btn-light" data-clipboard-target="#{{printf "clipboard_%s" (.Scratch.Get "identifier") }}">
-        Copy
-        </button>
-    </div>
-    <div id="{{printf "clipboard_%s" (.Scratch.Get "identifier") }}">
+    <div class="border" id="{{printf "clipboard_%s" (.Scratch.Get "identifier") }}">
+      <div class="position-absolute pt-1 pr-1" style="right:0;">
+          <button class="btn btn-light" data-clipboard-target="#{{printf "clipboard_%s" (.Scratch.Get "identifier") }}">
+            <i class="far fa-copy"></i>
+          </button>
+      </div>
       {{ (print "```" $lang "\n" (.Scratch.Get "content") "\n```") | markdownify }}
     </div>
 </div>
