--- a/layouts/shortcodes/chromaDouble.html
+++ b/layouts/shortcodes/chromaDouble.html
@@ -22,27 +22,45 @@
     "missing rhs file input"
 {{ end}}
 
-<div class="d-flex flex-column flex-sm-row align-items-stretch">
-  <div class="px-1 flex-fill align-self-stretch">
+<div class="d-flex flex-column flex-sm-row mb-3 flex-wrap">
+
+  <div class="px-1 flex-fill flex-column d-flex">
     <p class="pl-2 py-1 m-0 border bg-light">{{ $lhsTitle }}</p>
-    {{ if $lhsLang }}
-      {{ (print "```" $lhsLang "\n" (.Scratch.Get "lhsContent") "\n```") | markdownify }}
-    {{ else }}
-      <div class="highlight">
-        {{ .Scratch.Get "lhsContent" | safeHTML }}
+    <div class="position-relative border flex-fill" id="{{printf "clipboard_%s" (.Scratch.Get "lhsIdentifier") }}">
+      <div class="position-absolute pt-1 pr-1" style="right:0;">
+        <button class="btn btn-light" data-clipboard-target="#{{printf "clipboard_%s" (.Scratch.Get "lhsIdentifier") }}">
+          <i class="far fa-copy"></i>
+        </button>
       </div>
-    {{ end }}
+      {{ if $lhsLang }}
+        {{ (print "```" $lhsLang "\n" (.Scratch.Get "lhsContent") "\n```") | markdownify }}
+      {{ else }}
+        <div class="highlight">
+          {{ .Scratch.Get "lhsContent" | safeHTML }}
+        </div>
+      {{ end }}
+    </div>
   </div>
-  <div class="px-1 flex-fill align-self-stretch">
+
+  <div class="px-1 flex-fill">
     <p class="pl-2 py-1 m-0 border bg-light">{{ $rhsTitle }}</p>
-    {{ if $rhsLang }}
-      {{ (print "```" $rhsLang "\n" (.Scratch.Get "rhsContent") "\n```") | markdownify }}
-    {{ else }}
-      <div class="highlight">
-        {{ .Scratch.Get "rhsContent" | safeHTML }}
+    <div class="position-relative border" id="{{printf "clipboard_%s" (.Scratch.Get "rhsIdentifier") }}">
+      <div class="position-absolute pt-1 pr-1" style="right:0;">
+          <button class="btn btn-light" data-clipboard-target="#{{printf "clipboard_%s" (.Scratch.Get "rhsIdentifier") }}">
+          <i class="far fa-copy"></i>
+          </button>
       </div>
-    {{ end }}
+      {{ if $rhsLang }}
+        {{ (print "```" $rhsLang "\n" (.Scratch.Get "rhsContent") "\n```") | markdownify }}
+      {{ else }}
+        <div class="highlight">
+          {{ .Scratch.Get "rhsContent" | safeHTML }}
+        </div>
+      {{ end }}
+
+    </div>
   </div>
+
 </div>
 
 
