--- a/layouts/shortcodes/chromaHTML.html
+++ b/layouts/shortcodes/chromaHTML.html
@@ -11,21 +11,20 @@
     "missing file input"
 {{ end}}
 
-<div class="position-relative">
+<div class="position-relative mb-3">
     {{ if $title }}
     <p class="pl-2 py-1 m-0 border bg-light">{{ $title }}</p>
     {{ end }}
-    <div class="position-absolute" style="right:0;">
-        <button class="btn btn-light" data-clipboard-target="#{{printf "clipboard_%s" (.Scratch.Get "identifier") }}">
-        Copy
-        </button>
-    </div>
-    <div id="{{printf "clipboard_%s" (.Scratch.Get "identifier") }}">
+
+    <div class="border" id="{{printf "clipboard_%s" (.Scratch.Get "identifier") }}">
+      <div class="position-absolute pt-1 pr-1" style="right:0;">
+          <button class="btn btn-light" data-clipboard-target="#{{printf "clipboard_%s" (.Scratch.Get "identifier") }}">
+          <i class="far fa-copy"></i>
+          </button>
+      </div>
       <div class="highlight">
         {{ .Scratch.Get "content" | safeHTML }}
       </div>
     </div>
 </div>
-
-
 
