--- a/layouts/shortcodes/chromaDouble.html
+++ b/layouts/shortcodes/chromaDouble.html
@@ -22,9 +22,9 @@
     "missing rhs file input"
 {{ end}}
 
-<div class="d-flex flex-column flex-sm-row mb-3 flex-wrap">
+<div class="d-flex flex-column flex-sm-row flex-wrap">
 
-  <div class="px-1 flex-fill flex-column d-flex">
+  <div class="px-1 flex-fill flex-column d-flex mb-3">
     <p class="pl-2 py-1 m-0 border bg-light">{{ $lhsTitle }}</p>
     <div class="position-relative border flex-fill" id="{{printf "clipboard_%s" (.Scratch.Get "lhsIdentifier") }}">
       <div class="position-absolute pt-1 pr-1" style="right:0;">
@@ -42,9 +42,9 @@
     </div>
   </div>
 
-  <div class="px-1 flex-fill">
+  <div class="px-1 flex-fill flex-column d-flex mb-3">
     <p class="pl-2 py-1 m-0 border bg-light">{{ $rhsTitle }}</p>
-    <div class="position-relative border" id="{{printf "clipboard_%s" (.Scratch.Get "rhsIdentifier") }}">
+    <div class="position-relative border flex-fill" id="{{printf "clipboard_%s" (.Scratch.Get "rhsIdentifier") }}">
       <div class="position-absolute pt-1 pr-1" style="right:0;">
           <button class="btn btn-light" data-clipboard-target="#{{printf "clipboard_%s" (.Scratch.Get "rhsIdentifier") }}">
           <i class="far fa-copy"></i>
