--- a/layouts/shortcodes/chromaHTML.html
+++ b/layouts/shortcodes/chromaHTML.html
@@ -11,7 +11,7 @@
     "missing file input"
 {{ end}}
 
-<div class="position-relative mb-3">
+<div class="position-relative mb-3 overflow-auto">
     {{ if $title }}
     <p class="pl-2 py-1 m-0 border bg-light">{{ $title }}</p>
     {{ end }}
