--- a/layouts/partials/next-prev-page.html
+++ b/layouts/partials/next-prev-page.html
@@ -34,15 +34,17 @@
 <div class="d-flex justify-content-around">
 
   {{- with ($.Scratch.Get "prevPage") -}}
-  <div class="bg-primary overflow-hidden p-3 mt-5 shadow" style="width: 40%">
-      <a class="p-1 mr-3 d-inline-block text-white" href="{{.RelPermalink}}" title="{{.Title}}"><i class="fas fa-chevron-left px-2"></i>{{.Title}}</a>
-  </div>
+  <a class="bg-primary overflow-hidden p-3 text-white shadow d-flex flex-row" style="width: 40%" href="{{.RelPermalink}}" title="{{.Title}}">
+    <i class="fas fa-chevron-left align-self-center"></i>
+    <p class="flex-fill align-self-center my-0 text-center">{{.Title}}</p>
+  </a>
   {{ end -}}
 
   {{- with ($.Scratch.Get "nextPage") -}}
-  <div class="bg-primary overflow-hidden p-3 mt-5 shadow" style="width: 40%">
-      <a class="p-1 ml-3 d-inline-block text-white text-right" href="{{.RelPermalink}}" title="{{.Title}}">{{.Title}}<i class="fas fa-chevron-right px-2"></i></a>
-  </div>
+  <a class="bg-primary overflow-hidden p-3 text-white shadow d-flex flex-row" style="width: 40%" href="{{.RelPermalink}}" title="{{.Title}}">
+    <p class="flex-fill align-self-center my-0 text-center">{{.Title}}</p>
+    <i class="fas fa-chevron-right align-self-center"></i>
+  </a>
   {{- end }}
 
 </div>
