--- a/layouts/partials/content-footer.html
+++ b/layouts/partials/content-footer.html
@@ -3,12 +3,11 @@ Last modified {{ .Lastmod.Format .Site.Params.time_format_default }}{{ with .Git
 </div>
 
 <div class="d-flex flex-row justify-content-between my-3">
-  <div class="ml-3">
-      {{ partial "feedback.html" .Site.Params.ui.feedback }}
-      <br />
+  <div class="align-self-center" style="width:50%">
+    <a class="btn btn-primary" href="/getting-help">Get CUE support and training from Hofstadter</a>
   </div>
 
-  <div class="mr-5">
+  <div class="" style="width:40%">
     {{ partial "page-meta-links.html" . }}
   </div>
 </div>
