change support button color
Signed-off-by: Tony Worm <tony@hofstadter.io>

--- a/layouts/partials/content-footer.html
+++ b/layouts/partials/content-footer.html
@@ -4,7 +4,7 @@ Last modified {{ .Lastmod.Format .Site.Params.time_format_default }}{{ with .Git
 
 <div class="d-flex flex-row justify-content-between my-3">
   <div class="align-self-center" style="width:50%">
-    <a class="btn btn-primary" href="/getting-help">Get CUE support and training from Hofstadter</a>
+    <a class="btn btn-success" href="/getting-help">Get CUE support and training from Hofstadter</a>
   </div>
 
   <div class="" style="width:40%">
