--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -1,8 +1,9 @@
 <!-- Load required Javascript -->
-<script src="{{ .Site.BaseURL }}lib/jquery.min.js"></script> <!-- jQuery.js -->
-<script src="{{ .Site.BaseURL }}lib/popper.min.js"></script> <!-- Popper.js - dependency of Bootstrap -->
+<script src="/lib/jquery.min.js"></script> <!-- jQuery.js -->
+<script src="/lib/popper.min.js"></script> <!-- Popper.js - dependency of Bootstrap -->
 
-<script src="{{ .Site.BaseURL }}js/bootstrap.min.js"></script> <!-- Other javascript -->
+<script src="/js/bootstrap.min.js"></script> <!-- Other javascript -->
+<script src="/js/playground.js"></script> <!-- Other javascript -->
 
 <!-- Plugin: search -->
 <script type="text/javascript" src="{{"plugins/lunr.min.js" | relURL}}"></script>
