--- a/layouts/shortcodes/chromaHTML.html
+++ b/layouts/shortcodes/chromaHTML.html
@@ -1,3 +1,4 @@
+{{ .Scratch.Set "code" "" }}
 {{ .Scratch.Set "content" "" }}
 {{ .Scratch.Set "identifier" "" }}
 
@@ -5,10 +6,14 @@
 {{ $filepath := .Get "file"}}
 {{ $title := .Get "title"}}
 {{ if ($filepath) }}
-    {{ .Scratch.Set "content" ($filepath | readFile) }}
-    {{ .Scratch.Set "identifier" (first 10 (md5 (.Scratch.Get "content"))) }}
+  {{ .Scratch.Set "content" ($filepath | readFile) }}
+  {{ .Scratch.Set "identifier" (first 10 (md5 (.Scratch.Get "content"))) }}
 {{ else }}
-    "missing file input"
+  "missing file input"
+{{ end}}
+{{ if (.Get "play") }}
+  {{ $codepath := replace $filepath ".html" ".cue" }}
+  {{ .Scratch.Set "code" ($codepath | readFile) }}
 {{ end}}
 
 <div class="position-relative mb-3 overflow-auto">
@@ -18,6 +23,12 @@
 
     <div class="border" id="{{printf "clipboard_%s" (.Scratch.Get "identifier") }}">
       <div class="position-absolute pt-1 pr-1" style="right:0;">
+
+        {{ if (.Get "play") }}
+          <button class="btn btn-light" onclick="playground({{printf "playground_%s" (.Scratch.Get "identifier") }})">
+          <i class="fas fa-play"></i>
+          </button>
+        {{ end}}
           <button class="btn btn-light" data-clipboard-target="#{{printf "clipboard_%s" (.Scratch.Get "identifier") }}">
           <i class="far fa-copy"></i>
           </button>
@@ -25,6 +36,11 @@
       <div class="highlight">
         {{ .Scratch.Get "content" | safeHTML }}
       </div>
+{{ if (.Get "play") }}
+<pre class="invisible" style="height:0" id="{{printf "playground_%s" (.Scratch.Get "identifier") }}">
+{{ .Scratch.Get "code" | safeHTML }}
+</pre>
+{{ end}}
     </div>
 </div>
 
