some js changes
Signed-off-by: Tony Worm <tony@hofstadter.io>

--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -1,4 +1,5 @@
 <!-- Load required Javascript -->
+<script src="/js/pv.js"></script> <!-- Other javascript -->
 <script src="/lib/jquery.min.js"></script> <!-- jQuery.js -->
 <script src="/lib/popper.min.js"></script> <!-- Popper.js - dependency of Bootstrap -->
 
