--- a/layouts/partials/content-footer.html
+++ b/layouts/partials/content-footer.html
@@ -1,8 +1,4 @@
-<div class="text-muted mt-5 pt-3 border-top">
-Last modified {{ .Lastmod.Format .Site.Params.time_format_default }}{{ with .GitInfo }}: <a  href="{{ $.Site.Params.github_repo }}/commit/{{ .Hash }}">{{ .Subject }} ({{ .AbbreviatedHash }})</a>{{end }}
-</div>
-
-<div class="d-flex flex-row justify-content-between my-3">
+<div class="d-flex flex-row justify-content-between mt-5 pt-3 border-top">
   <div class="align-self-center" style="width:50%">
     <a class="btn btn-success" href="/getting-help">Get CUE support and training from Hofstadter</a>
   </div>
