--- a/assets/css/ace.scss
+++ b/assets/css/ace.scss
@@ -135,3 +135,8 @@ table > tbody > tr > td, .bd-content > table > tbody > tr > th, .bd-content > ta
 table > thead {
   border: 1px solid #dee2e6;
 }
+
+h3.anchor {
+  padding-top: 100px;
+  margin-top: -100px;
+}
