--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,7 +3,7 @@
   {{- partial "head.html" . -}}
   <body>
 
-    {{- partial "header.html" . -}}
+    {{- partial "navbar.html" . -}}
 
     <div class="container-fluid">
       <div class="row">
