more reorg and outlining
Signed-off-by: Tony Worm <tony@hofstadter.io>

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -33,6 +33,8 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png" />
 
+  <meta name="keywords" content="{{.Site.Params.keywords}}{{ range .Params.keywords }} {{ . }}{{ end }}" />
+
   {{ $c1 := resources.Get "css/fontawesome.min.css" }}
   {{ $c2 := resources.Get "plugins/auto-complete.css" | minify }}
   {{ $c3 := resources.Get "css/ace.scss" | toCSS | minify }}
