add breadcrumbs, start attrs deep-dive, frame out go-api
Signed-off-by: Tony Worm <tony@hofstadter.io>

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -21,6 +21,7 @@
           <div class="main col-12 order-1 col-md-9 col-lg-10 col-xl-10 py-3" id="main-content">
           {{end}}
 
+              {{ partial "breadcrumbs.html" . }}
               {{- block "main" . }}{{- end }}
 
               <div class="row">
