--- a/layouts/shortcodes/codePane2.html
+++ b/layouts/shortcodes/codePane2.html
@@ -49,7 +49,7 @@
         </button>
       </div>
       {{ if $lang1 }}
-        {{ (print "```" $lang1 "\n" (.Scratch.Get "content1") "\n```") | markdownify }}
+        {{ (print "```" $lang1 "\n" (.Scratch.Get "content1") "```") | markdownify }}
       {{ else }}
         <div class="highlight">
           {{ .Scratch.Get "content1" | safeHTML }}
@@ -79,7 +79,7 @@
           </button>
       </div>
       {{ if $lang2 }}
-        {{ (print "```" $lang2 "\n" (.Scratch.Get "content2") "\n```") | markdownify }}
+        {{ (print "```" $lang2 "\n" (.Scratch.Get "content2") "```") | markdownify }}
       {{ else }}
         <div class="highlight">
           {{ .Scratch.Get "content2" | safeHTML }}
