--- a/layouts/shortcodes/jobs.html
+++ b/layouts/shortcodes/jobs.html
@@ -7,8 +7,8 @@
   <ul class="list-group list-group-flush">
     {{ range .jobs }}
     <li class="list-group-item">
-      <a href="{{.link}}" target="_blank" style="display: inline-block; width:33%;">{{.name}}</a>
-      <span> {{.short}} </span>
+      <a href="{{.link}}" target="_blank">{{.name}}</a>
+      <span class="ml-3">{{.short}}</span>
     </li>
 
     {{ end }}
