use monospace font for code block titles
Signed-off-by: Tony Worm <tony@hofstadter.io>

--- a/assets/css/ace.scss
+++ b/assets/css/ace.scss
@@ -144,3 +144,7 @@ h3.anchor {
   padding-top: 8rem;
   margin-top: -6rem;
 }
+
+.code-title {
+	font-family: Regular,Menlo,Monaco,Consolas,liberation mono,courier new,monospace;
+}
