--- a/layouts/shortcodes/codePane2.html
+++ b/layouts/shortcodes/codePane2.html
@@ -35,7 +35,7 @@
 
   <div class="px-1 flex-fill flex-column d-flex mb-3">
     {{ if $title1 }}
-    <p class="pl-2 py-1 m-0 border bg-light">{{ $title1 }}</p>
+    <p class="pl-2 py-1 m-0 border bg-light code-title">{{ $title1 }}</p>
     {{ end }}
     <div class="position-relative border flex-fill" id="{{printf "clipboard_%s" (.Scratch.Get "ident1") }}">
       <div class="position-absolute pt-1 pr-1" style="right:0;">
@@ -65,7 +65,7 @@
 
   <div class="px-1 flex-fill flex-column d-flex mb-3">
     {{ if $title2 }}
-    <p class="pl-2 py-1 m-0 border bg-light">{{ $title2 }}</p>
+    <p class="pl-2 py-1 m-0 border bg-light code-title">{{ $title2 }}</p>
     {{ end }}
     <div class="position-relative border flex-fill" id="{{printf "clipboard_%s" (.Scratch.Get "ident2") }}">
       <div class="position-absolute pt-1 pr-1" style="right:0;">
