--- a/layouts/shortcodes/codePane3.html
+++ b/layouts/shortcodes/codePane3.html
@@ -51,7 +51,7 @@
 
   <div class="px-1 flex-fill flex-column d-flex mb-3">
     {{ if $title1 }}
-    <p class="pl-2 py-1 m-0 border bg-light">{{ $title1 }}</p>
+    <p class="pl-2 py-1 m-0 border bg-light code-title">{{ $title1 }}</p>
     {{ end }}
     <div class="position-relative border flex-fill" id="{{printf "clipboard_%s" (.Scratch.Get "ident1") }}">
       <div class="position-absolute pt-1 pr-1" style="right:0;">
@@ -81,7 +81,7 @@
 
   <div class="px-1 flex-fill flex-column d-flex mb-3">
     {{ if $title2 }}
-    <p class="pl-2 py-1 m-0 border bg-light">{{ $title2 }}</p>
+    <p class="pl-2 py-1 m-0 border bg-light code-title">{{ $title2 }}</p>
     {{ end }}
     <div class="position-relative border flex-fill" id="{{printf "clipboard_%s" (.Scratch.Get "ident2") }}">
       <div class="position-absolute pt-1 pr-1" style="right:0;">
@@ -111,7 +111,7 @@
 
   <div class="px-1 flex-fill flex-column d-flex mb-3">
     {{ if $title3 }}
-    <p class="pl-2 py-1 m-0 border bg-light">{{ $title3 }}</p>
+    <p class="pl-2 py-1 m-0 border bg-light code-title">{{ $title3 }}</p>
     {{ end }}
     <div class="position-relative border flex-fill" id="{{printf "clipboard_%s" (.Scratch.Get "ident3") }}">
       <div class="position-absolute pt-1 pr-1" style="right:0;">
