--- a/assets/css/ace.scss
+++ b/assets/css/ace.scss
@@ -148,3 +148,8 @@ h3.anchor {
 .code-title {
 	font-family: Regular,Menlo,Monaco,Consolas,liberation mono,courier new,monospace;
 }
+
+pre.shiki {
+  // -moz-tab-size:2;-o-tab-size:2;tab-size:2;
+  -moz-tab-size:4;-o-tab-size:4;tab-size:4;
+}
