add shiki as dep, update readme for translations
Signed-off-by: Tony Worm <tony@hofstadter.io>

--- a/assets/css/ace.scss
+++ b/assets/css/ace.scss
@@ -51,6 +51,12 @@ body, .main {
 	font-size: 1.5rem;
 }
 
+#TableOfContents {
+	a {
+		display: inline
+	}
+}
+
 .nav-link {
   &.parent {
     color: #0058aa !important;
