feat: add i18n support

--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -6,7 +6,7 @@
      <div class="collapse navbar-collapse align-items-start flex-column" id="sidenav-left-collapse">
         {{- if not .Site.Params.disableSearch}}
             <form class="form-inline my-2 my-lg-0 searchbox">
-                <input class="form-control mr-sm-2 w-100" data-search-input id="search-by" type="text" placeholder="Search">
+                <input class="form-control mr-sm-2 w-100" data-search-input id="search-by" type="text" placeholder='{{ i18n "Search" }}'>
             </form>
         {{- end}}
          <ul class="navbar-nav flex-column pt-3">
