--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -28,6 +28,7 @@
                   <li class="nav-item dropdown">
                       <a class="nav-link" href="#" data-toggle="dropdown">
                           <i class='fa fa-globe-europe'></i>
+                          {{ .Site.Language.LanguageName }}
                       </a>
                       <ul class="dropdown-menu dropdown-menu-right" role="menu" style="min-width:100px" >
                           {{ range $.Site.Home.AllTranslations }}
